pakiet-start-zamow

--- a/src/app/sites/contact/contact/contact.component.html
+++ b/src/app/sites/contact/contact/contact.component.html
@@ -1,8 +1,10 @@
-<div class="contact-container text-block">
+<div class="contact-container">
+    <img class="img-logo" src="assets/svg/newId_logo.svg" alt="newId logo">
+    <h2>Bartosz Prochowski</h2>
     <p>Poznań, Bolka 2/81</p>
     <p>
         <a href="tel:+48509229735">
-            +48 509 229 735
+            <span style="font-size: smaller;">+48</span>&nbsp;<span style="font-size: x-large;">509 229 735</span>
         </a>
     </p>
     <p>
@@ -10,5 +12,12 @@
             info@newId.pl
         </a>
     </p>
+    <br />
+    <div class="contact-footer">
+        <h6>
+            Pozostańmy w kontakcie, zapraszamy do polubienia/obserwowania naszch profili społecznościowych <a href="https://facebook.com/newIdPl"><span><strong>FB/newIdPl</strong></span></a>&nbsp;|&nbsp;<a href="https://instagram.com/newId.Pl"><span><strong>Insta/newId.pl</strong></span></a>
+        </h6>
+    </div>
+
 
 </div>
