--- a/src/app/sites/promo/pakiet-start/pakiet-start.component.css
+++ b/src/app/sites/promo/pakiet-start/pakiet-start.component.css
@@ -40,3 +40,11 @@ p {
 .pakiet-start-cena {
     margin-top: -25%x;
 }
+
+
+
+.svg-click {
+    fill: none;
+    stroke-width: 2;
+    stroke: azure;
+}
