--- a/src/app/sites/promo/pakiet-start-zamow/pakiet-start-zamow.component.html
+++ b/src/app/sites/promo/pakiet-start-zamow/pakiet-start-zamow.component.html
@@ -1,15 +1,42 @@
 <div class="zamow-container">
 
+    <div class="zamow-main">
 
-    <svg class="text-block" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 1080 1080" preserveAspectRatio="xMidYMid meet">
-        <image x="0" y="0" width="100%" height="100%" xlink:href="../../../../assets/svg/promo/promocja-start/wykrzyknik.svg" preserveAspectRatio="xMidYMid meet"></image>
-    </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 1080 2160" preserveAspectRatio="xMidYMid slice">
+            <g>
+                <text class="zamow-t1" text-anchor="start" x="5%" y="300" font-size="250" font-family="Raleway" >TAK !</text>
+            </g>
+    
+            <g>
+                <text class="zamow-t2" text-anchor="start" x="5%" y="600" font-size="100" font-family="Raleway" font-weight="bold">Zamawiam</text>
+            </g>
 
-    <div class="text-block default-text">
-        <div>
-            Skontaktuj się z nami, 
+            <image x="0" y="400" width="50%" height="50%" xlink:href="../../../../assets/svg/promo/promocja-start/pakiet-start.svg" preserveAspectRatio="xMidYMid meet"></image>
+
+            <image x="35%" y="0" width="60%" height="60%" xlink:href="../../../../assets/svg/promo/promocja-start/wykrzyknik.svg" preserveAspectRatio="xMidYMid meet"></image>
+
+
+            <circle cx="50%" cy="1750" r="400" fill="#D92579"></circle>
+            <circle cx="50%" cy="1750" r="380" class="circle-fill"></circle>
+            <image x="30%" y="1375" width="35%" height="35%" xlink:href="../../../../assets/svg/icons/telephone.svg" preserveAspectRatio="xMidYMid meet"></image>
+
+            <a href="tel:509229735">
+                <image x="17%" y="1050" width="65%" height="65%" xlink:href="../../../../assets/svg/icons/click-round.svg" preserveAspectRatio="xMidYMid meet"></image>
+            </a>
+
+        </svg>
+
+
+    
+    
+        <div class="text-block">
+            <div>
+                <span routerLink="/promo/pakiet-start">Wróć do informacji o <strong>Pakiet Start</strong></span>
+            </div>
         </div>
-        
+
+
     </div>
+
 
 </div>
