--- a/src/app/sites/promo/promo/promo.component.html
+++ b/src/app/sites/promo/promo/promo.component.html
@@ -10,7 +10,7 @@
     
     </mat-card-content>
     <mat-card-actions>
-        <button mat-raised-button routerLink="/promo/pakiet-start">Zobacz szczegóły</button>
+        <button mat-flat-button color="accent" routerLink="/promo/pakiet-start">Zobacz szczegóły</button>
     </mat-card-actions>
 </mat-card>
 
