--- a/src/app/sites/promo/pakiet-start-zamow/pakiet-start-zamow.component.html
+++ b/src/app/sites/promo/pakiet-start-zamow/pakiet-start-zamow.component.html
@@ -16,13 +16,15 @@
             <image x="35%" y="0" width="60%" height="60%" xlink:href="../../../../assets/svg/promo/promocja-start/wykrzyknik.svg" preserveAspectRatio="xMidYMid meet"></image>
 
 
-            <circle cx="50%" cy="1750" r="400" fill="#D92579"></circle>
-            <circle cx="50%" cy="1750" r="380" class="circle-fill"></circle>
-            <image x="30%" y="1375" width="35%" height="35%" xlink:href="../../../../assets/svg/icons/telephone.svg" preserveAspectRatio="xMidYMid meet"></image>
-
             <a href="tel:509229735">
-                <image x="17%" y="1050" width="65%" height="65%" xlink:href="../../../../assets/svg/icons/click-round.svg" preserveAspectRatio="xMidYMid meet"></image>
-            </a>
+            <g>
+                <circle cx="50%" cy="1750" r="400" fill="#D92579"></circle>
+                <circle cx="50%" cy="1750" r="380" class="circle-fill"></circle>
+                <image x="30%" y="1375" width="35%" height="35%" xlink:href="../../../../assets/svg/icons/telephone.svg" preserveAspectRatio="xMidYMid meet"></image>
+                <image x="150" y="975" width="72%" height="72%" xlink:href="../../../../assets/svg/icons/click-round.svg"></image>
+            </g>
+        </a>
+
 
         </svg>
 
@@ -31,7 +33,7 @@
     
         <div class="text-block">
             <div>
-                <span routerLink="/promo/pakiet-start">Wróć do informacji o <strong>Pakiet Start</strong></span>
+                Wróć do informacji o <span class="router-link" routerLink="/promo/pakiet-start"><strong>Pakiet Start</strong></span>
             </div>
         </div>
 
