--- a/src/app/sites/footer/footer.component.css
+++ b/src/app/sites/footer/footer.component.css
@@ -1,30 +1,20 @@
-.footer-container {
-
-    
-}
-
-
 footer {
-    max-width: 250px;
+    max-width: 300px;
     height: 50px;
     margin: auto;
     padding: 10px;    
 }
 
-footer > div {
+.menu-link {
     font-size: medium;
+    text-align: center;
     cursor: pointer;
-    font-weight: 100;
-    width: 50px;
-}
-
-footer > div:hover {
-    font-weight: 500;
+    font-weight: 200;
+    width: 100px;
+    transition: font-size 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 
-
-
-.activelink {
-    font-weight: 400;
+.active-menu-link {
+    font-size: x-large;
 }
