promocje fix url

--- a/src/app/sites/header/header.component.html
+++ b/src/app/sites/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header-container" *ngIf="ctrlSrv.isHeaderShown$ | async">
     <header @brickList fxLayout fxLayoutAlign="space-around center">
         <div class="menu-link" routerLinkActive="active-menu-link" routerLink="/home">start</div>
-        <div class="menu-link" routerLinkActive="active-menu-link" routerLink="/promo">promo</div>
+        <div class="menu-link" routerLinkActive="active-menu-link" routerLink="/promocje">promocje</div>
         <div class="menu-link" routerLinkActive="active-menu-link" routerLink="/kontakt">kontakt</div>
     </header>
 </div>
