promo - promocje fix

--- a/src/app/sites/promocje/pakiet-start-zamow/pakiet-start-zamow.component.html
+++ b/src/app/sites/promocje/pakiet-start-zamow/pakiet-start-zamow.component.html
@@ -11,9 +11,9 @@
                 <text class="zamow-t2" text-anchor="start" x="5%" y="600" font-size="100" font-family="Raleway" font-weight="bold">Zamawiam</text>
             </g>
 
-            <image x="0" y="400" width="50%" height="50%" xlink:href="../../../../assets/svg/promo/promocja-start/pakiet-start.svg" preserveAspectRatio="xMidYMid meet"></image>
+            <image x="0" y="400" width="50%" height="50%" xlink:href="../../../../assets/svg/promocje/promocja-start/pakiet-start.svg" preserveAspectRatio="xMidYMid meet"></image>
 
-            <image x="35%" y="0" width="60%" height="60%" xlink:href="../../../../assets/svg/promo/promocja-start/wykrzyknik.svg" preserveAspectRatio="xMidYMid meet"></image>
+            <image x="35%" y="0" width="60%" height="60%" xlink:href="../../../../assets/svg/promocje/promocja-start/wykrzyknik.svg" preserveAspectRatio="xMidYMid meet"></image>
 
 
             <a href="tel:509229735">
@@ -33,7 +33,7 @@
     
         <div class="text-block">
             <div>
-                Wróć do informacji o <span class="router-link" routerLink="/promo/pakiet-start"><strong>Pakiet Start</strong></span>
+                Wróć do informacji o <span class="router-link" routerLink="/promocje/pakiet-start"><strong>Pakiet Start</strong></span>
             </div>
         </div>
 
