--- a/src/app/sites/promocje/promocje/promocje.component.html
+++ b/src/app/sites/promocje/promocje/promocje.component.html
@@ -1,16 +1,16 @@
-<div class="promo-container" fxLayout="row" >
+<div class="promocje-container" fxLayout="row" >
 
 <mat-card>
     <mat-card-header>
         <mat-card-title>Pakiet START</mat-card-title>
         <mat-card-subtitle>Twoja firma w Internecie</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="../../../../assets/images/promo/newId_pakietStart.png" alt="NewId - Paket Start">
+    <img mat-card-image src="../../../../assets/images/promocje/newId_pakietStart.png" alt="NewId - Paket Start">
     <mat-card-content>
     
     </mat-card-content>
     <mat-card-actions>
-        <button mat-flat-button color="accent" routerLink="/promo/pakiet-start">Zobacz szczegóły</button>
+        <button mat-flat-button color="accent" routerLink="/promocje/pakiet-start">Zobacz szczegóły</button>
     </mat-card-actions>
 </mat-card>
 
