--- a/src/app/sites/promocje/pakiet-start/pakiet-start.component.html
+++ b/src/app/sites/promocje/pakiet-start/pakiet-start.component.html
@@ -73,24 +73,14 @@
     
     </div>
 
+    <div class="bg-4">
+        <app-promocje-zadzwon routerLink="/promocje/pakiet-start-zamow"></app-promocje-zadzwon>
+    </div>
+    
 
 
-    <svg style="cursor: pointer;" routerLink="/promocje/pakiet-start-zamow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 1000 150" preserveAspectRatio="xMidYMid meet">
-        <rect x="0" y="0" width="100%" height="100%" fill="#F2CB05" ></rect>
-        <!-- <rect x="31%" y="0" width="61%" height="100%" fill="#D98E04" ></rect>
-        <rect x="31%" y="0" width="1%" height="100%" fill="#D25EF2" ></rect> -->
-
-        <text text-anchor="start" x="1%" y="125" font-size="100" font-family="Raleway" class="svg-click">Click !</text>
-        <text text-anchor="middle" x="25%" y="25" font-size="20" font-family="Raleway" fill="#D92579">ZAMÓW - ZADZWOŃ</text>
-        <text text-anchor="middle" x="75%" y="25" font-size="20" font-family="Raleway" fill="#D92579">ZADZWOŃ - ZAMÓW</text>
-        <text text-anchor="end" x="99%" y="125" font-size="100" font-family="Raleway" class="svg-click">Click !</text>
 
 
-       <svg x="350" y="50" width="75" height="75" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm-11.52 32L256 236.32 59.52 96h392.96zM480 400c0 8.837-7.163 16-16 16H48c-8.837 0-16-7.163-16-16V115.68l214.72 153.28a16 16 0 0018.56 0L480 115.68V400z"/></svg>
-       <svg x="575" y="50" width="75" height="75" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m13.33 18.076c4.05.964 5.475-2.5 4.761-3.793-.286-.516-2.856-1.507-2.981-1.555-1.104-.402-1.512.348-2.277 1.335-1.469-.735-2.454-1.314-3.466-2.96.057-.071.133-.155.19-.219.354-.396 1.017-1.134.565-2.037-.38-.757-.569-1.285-.708-1.672-.403-1.121-.71-1.425-2.098-1.425-1.445 0-2.566 1.899-2.566 3.534 0 3.569 4.798 7.889 8.58 8.792zm-6.014-10.826c.3 0 .452.01.528.022.162.343.326 1.059.93 2.173-.094.351-1.429 1.174-.81 2.238 1.265 2.148 2.531 2.893 4.345 3.795 1.208.546 1.594-.443 2.36-1.312.355.144 1.553.674 2.079.94-.047 1.036-1.047 1.992-3.07 1.51-3.472-.829-7.429-4.735-7.429-7.333.001-.988.694-2.033 1.067-2.033z"/><path d="m.083 23.085c-.131.474.224.949.723.949.18 0-.114.046 5.848-1.5 2.427 1.236 4.272 1.197 5.45 1.308 10.555 0 15.725-12.873 8.461-20.363-9.957-9.624-25.464 2.336-18.975 14.127zm19.288-18.672c.173.316 5.135 4.791 2.372 11.478-1.701 4.12-5.626 6.659-10.024 6.421-3.578-.199-4.504-1.477-5.163-1.302l-4.683 1.22 1.245-4.524c.054-.194.027-.401-.073-.575-5.983-10.324 7.546-20.939 16.326-12.718z"/></svg>
-       <image x="450" y="25" width="100" height="100" xlink:href="../../../../assets/svg/icons/telephone.svg" ></image>
-
-   </svg>  
 
 
 </div>
