header footer promo - promocje

--- a/src/app/sites/footer/footer.component.html
+++ b/src/app/sites/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer-container" *ngIf="ctrlSrv.isFooterShown$ | async">
     <footer @brickList fxLayout fxLayoutAlign="space-around center">
-        <div class="menu-link" routerLinkActive="active-menu-link" routerLink="/home">start</div>
-        <div class="menu-link" routerLinkActive="active-menu-link" routerLink="/promocje">promocje</div>
-        <div class="menu-link" routerLinkActive="active-menu-link" routerLink="/kontakt">kontakt</div>
+        <a class="menu-link" routerLinkActive="active-menu-link" routerLink="/home">start</a>
+        <a class="menu-link" routerLinkActive="active-menu-link" routerLink="/promocje">promocje</a>
+        <a class="menu-link" routerLinkActive="active-menu-link" routerLink="/kontakt">kontakt</a>
     </footer>
 </div>
