--- a/src/app/sites/promocje/promocje/promocje.component.css
+++ b/src/app/sites/promocje/promocje/promocje.component.css
@@ -1,5 +1,9 @@
-.promocje-container {
+/* .promocje-container {
     max-width: 640px;
     margin: auto;
     padding: 1em;
+} */
+
+mat-card {
+    margin: 5px;
 }
