contact remove bp

--- a/src/app/sites/contact/contact/contact.component.html
+++ b/src/app/sites/contact/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div class="contact-container">
     <img class="img-logo" src="assets/svg/newId_logo.svg" alt="newId logo">
-    <h2>Bartosz Prochowski</h2>
+    <!-- <h2>Bartosz Prochowski</h2> -->
     <p>Poznań, Bolka 2/81</p>
     <p>
         <a href="tel:+48509229735">
