--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,9 @@ body {
 
 
 /* unvisited link */
+a {
+    text-decoration: none;
+}
 a:link {
     color: var(--default-font-color);
   }
@@ -52,7 +55,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .text-block {
-    max-width: 640px;
+    max-width: 960px;
     margin: auto;
     /* padding-top: 2em;
     padding-bottom: 2em; */
@@ -60,9 +63,23 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     padding: 2em;
 }
 
+
+.text-duzy {
+    display: inline-block;
+    font-size: larger;
+    margin: auto;
+    text-align: center;
+    width: 100%;
+    padding: 0.2em;
+}
+
+.text-underline {
+    text-decoration: underline;
+    text-underline-position: below;
+}
+
 .default-text {
-    font-size: 1.5em;
-    line-height: 1.2em;
+    font-size: calc(1vw + 1vh + 1vmin);
 }
 
 .router-link {
@@ -73,4 +90,34 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .router-link:hover {
     color: var(--paleta-col-1);
+}
+
+
+.bg-1 {
+    background-color: var(--paleta-col-1);
+    border: none;
+}
+.bg-2 {
+    background-color: var(--paleta-col-2);
+    border: none;
+}
+.bg-3 {
+    background-color: var(--paleta-col-3);
+    border: none;
+}
+.bg-4 {
+    background-color: var(--paleta-col-4);
+    border: none;
+}
+.bg-5 {
+    background-color: var(--paleta-col-5);
+    border: none;
+}
+
+
+
+.svg-click {
+    fill: none;
+    stroke-width: 2;
+    stroke: azure;
 }
