marketing 3msc jestesmy obok dodatkowy opis

--- a/src/app/sites/promocje/obsluga-marketingowa3msc/obsluga-marketingowa3msc.component.html
+++ b/src/app/sites/promocje/obsluga-marketingowa3msc/obsluga-marketingowa3msc.component.html
@@ -65,16 +65,32 @@
             </svg>
         </div>
     </div>
-    <!-- <div class="bg-3">
+    <div class="bg-3">
         <div class="content-container">
-            <div class="text-block text-white">
-                Dzwoń, zróbmy różnicę na rynku !    
+            <div class="text-block text-white default-text">
+                <h1>Jesteśmy tuż obok !</h1>
+                <p>By nasze rozwiązanie było skuteczne, <strong>musimy się poznać</strong>. Obecne warunki troszeczkę to utrudniają jednak damy sobie radę z epidemią <i>COVID </i> i  skutecznie przygotujemy wymagane materiały                    
+                </p>
+                <p>
+                    Większość pracy wykonamy <strong>zdalnie</strong> jednak zbieranie kontentu; tworzenie klipów video, fotografia, wymagana konsultacja - lokalnie w siedzibie Waszej firmy/w "terenie" - zachowując maksymalne środki bezpieczeństwa <br>
+                </p>
             </div>
             
         </div>
-    </div> -->
+    </div>
 
-    <div class="bg-3">
+    <div class="bg-1">&nbsp;
+        <div class="default-text text-block text-white">
+            <h1>
+                Znamy realia
+            </h1>
+            <p>
+                Każdy oczekuje <strong>błyskawicznych rezultatów</strong> dlatego wspólnie ustalamy priorytety i sugerujemy plan działania by efekty naszej pracy były <strong>niezwłocznie zauważalne</strong>
+            </p>
+        </div>
+    </div>
+
+    <div class="bg-1">
         <!-- <app-promocje-zadzwon routerLink="/promocje/obsluga-marketingowa-3msc-zamow"></app-promocje-zadzwon> -->
         <app-promocje-zadzwon routerLink="/kontakt"></app-promocje-zadzwon>
     </div>
