fix projekty route module etc

--- a/src/app/sites/promocje/pakiet-start-zamow/pakiet-start-zamow.component.html
+++ b/src/app/sites/promocje/pakiet-start-zamow/pakiet-start-zamow.component.html
@@ -8,7 +8,7 @@
             </g>
     
             <g>
-                <text class="zamow-t2" text-anchor="start" x="5%" y="600" font-size="100" font-family="Raleway" font-weight="bold">Zamawiam</text>
+                <text class="zamow-t2" text-anchor="start" x="5%" y="600" font-size="100" font-family="Raleway" font-weight="bold">Więcej info !</text>
             </g>
 
             <image x="0" y="400" width="50%" height="50%" xlink:href="../../../../assets/svg/promocje/promocja-start/pakiet-start.svg" preserveAspectRatio="xMidYMid meet"></image>
