--- a/src/app/sites/promocje/promocje-zadzwon/promocje-zadzwon.component.html
+++ b/src/app/sites/promocje/promocje-zadzwon/promocje-zadzwon.component.html
@@ -3,10 +3,18 @@
     <!-- <rect x="31%" y="0" width="61%" height="100%" fill="#D98E04" ></rect>
     <rect x="31%" y="0" width="1%" height="100%" fill="#D25EF2" ></rect> -->
 
-    <text text-anchor="start" x="1%" y="125" font-size="100" font-family="Raleway" class="svg-click">Click !</text>
-    <text text-anchor="middle" x="25%" y="25" font-size="20" font-family="Raleway" fill="white">ZAMÓW - ZADZWOŃ</text>
-    <text text-anchor="middle" x="75%" y="25" font-size="20" font-family="Raleway" fill="white">ZADZWOŃ - ZAMÓW</text>
-    <text text-anchor="end" x="99%" y="125" font-size="100" font-family="Raleway" class="svg-click">Click !</text>
+    <!-- <text text-anchor="start" x="10%" y="110" font-size="100" font-family="Raleway" class="svg-click">&#62;&#62;&#62;</text> -->
+    <!-- <text text-anchor="middle" x="25%" y="25" font-size="20" font-family="Raleway" fill="white">INFO - ZADZWOŃ</text>
+    <text text-anchor="middle" x="75%" y="25" font-size="20" font-family="Raleway" fill="white">ZADZWOŃ - INFO</text> -->
+    <!-- <text text-anchor="end" x="90%" y="110" font-size="100" font-family="Raleway" class="svg-click">&#60;&#60;&#60;</text> -->
+
+    <text text-anchor="middle" x="50%" y="15" font-size="20" font-family="Raleway" fill="white">ZADZWOŃ - INFO</text>
+
+    <image  class="arrows-to-right" x="2%" y="10" height="130"  xlink:href="../../../../assets/inne/newId_arrows_toRight.png" ></image>
+    
+    <image  class="arrows-to-left" x="70%" y="10" height="130"  xlink:href="../../../../assets/inne/newId_arrows_toLeft.png" ></image>
+    
+    <!-- <image transform-origin="center center" transform="rotate(180) translate(-950)"  x="98%" y="10" height="130"  xlink:href="../../../../assets/inne/newId_arrows.png" ></image> -->
 
 
    <svg x="350" y="50" width="75" height="75" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm-11.52 32L256 236.32 59.52 96h392.96zM480 400c0 8.837-7.163 16-16 16H48c-8.837 0-16-7.163-16-16V115.68l214.72 153.28a16 16 0 0018.56 0L480 115.68V400z"/></svg>
