--- a/src/app/sites/promocje/pakiet-start/pakiet-start.component.html
+++ b/src/app/sites/promocje/pakiet-start/pakiet-start.component.html
@@ -4,7 +4,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 1080 1080" preserveAspectRatio="xMidYMid meet">
                 <image x="0" y="0" width="100%" height="100%" xlink:href="../../../../assets/svg/promocje/promocja-start/pakiet-start.svg" preserveAspectRatio="xMidYMid meet"></image>
             </svg>
-            <div class="pakiet-start-info default-text">
+            <div class="pakiet-start-info">
                 <p>
                     Twoja nowo otwarta firma musi pojawić się w sieci a nie masz czasu się tym zająć ? 
                 </p>
@@ -30,7 +30,7 @@
 
     <div class="pakiet-start-block-3">
         <div class="text-block">
-            <div class="pakiet-start-info default-text">
+            <div class="pakiet-start-info">
                 <p>
                     Skuteczne pozycjonowanie, odpowiednia domena, profesjonalnie przygotowane profile społecznościowe fb/insta. 
                 </p>
@@ -57,7 +57,7 @@
 
     <div class="pakiet-start-block-1">
         <div class="">
-            <div class="pakiet-start-info default-text">
+            <div class="pakiet-start-info">
 
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 1080 540" preserveAspectRatio="xMidYMid slice">
