fix router-link css

--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -1,7 +1,3 @@
-<p>
-  page-not-found works!
-</p>
-
-<div routerLink="/home">
+<div class="router-link" routerLink="/home">
   wróc do home
 </div>
