kajaki yt player

--- a/src/app/sites/projekty/kaczy-brzeg/kaczy-brzeg.component.html
+++ b/src/app/sites/projekty/kaczy-brzeg/kaczy-brzeg.component.html
@@ -15,9 +15,17 @@
                 <img width="80%" alt="kaczy brzeg - logo"
                     src="../../../../assets/projekty/kaczyBrzeg/KaczyBrzeg_signOnly_logo.png" />
             </div>
-            <div fxFlex="60">
-                Przez zmianę charakteru biznesu, nazwę, nową identyfikację wizualną, logotyp poprzez prowadzenie profili
-                społecznościowcyh bogatych w profesjonalne fotografie, grafiki, animacje, video...
+            <div fxFlex="100" fxFlex.gt-sm="60">
+                <div fxLayout="column" fxLayoutAlignt="space-around center">
+                    <div>
+                        Przez zmianę charakteru biznesu, nazwę, nową identyfikację wizualną, logotyp poprzez prowadzenie profili
+                        społecznościowcyh bogatych w profesjonalne fotografie, grafiki, animacje, video...
+                    </div>
+                    <div>
+                        <app-yt-player class="video-margin" [id]="'Bd384WTfhDo'"></app-yt-player>
+                    </div>
+                </div>
+
             </div>
         </div>
         <p>
@@ -66,7 +74,7 @@
         <p>
             Połączenie autorskiej motion grafik - <STRONG>PAMIĄTKA</STRONG> łączy zarówno przyjemny dla oka ślad po
             imprezie jak i
-            angażuje do spontanicznego udostępniania, komentowania - generowania ruchu - promowania marki !
+            angażuje do spontanicznego udostępniania, komentowania - generowania ruchu - promowania marki!
         </p>
         <div fxLayout="row wrap" fxLayoutAlign="space-around center">
             <div fxFlex="98" fxFlex.gt-sm="47">
@@ -78,7 +86,7 @@
         </div>
         <p>
             Wszystkie te zabiegi mają na celu budowanie pozytywnego wizerunku<br>
-            Wizerunku profesjonalnej, ale też przede wszystkim firmy z własnym <strong>"ID" !</strong>
+            Wizerunku profesjonalnej, ale też przede wszystkim firmy z własnym <strong>"ID"!</strong>
         </p>
         <hr>
         <h3>
@@ -97,7 +105,7 @@
         <br>
         <p>
             Jeśli szukasz firmy która pomoże Tobie zrobić różnicę na rynku, podpowie co jeszcze można zrobić, jak
-            szybciej/lepiej osiągnąć wyznaczone cele - oto jesteśmy ! <span class="router-link" routerLink="/kontakt">dzwoń !</span>
+            szybciej/lepiej osiągnąć wyznaczone cele - oto jesteśmy! <span class="router-link" routerLink="/kontakt">dzwoń!</span>
         </p>
         <hr>
 
