exclamation space sign fix

--- a/src/app/sites/promocje/obsluga-marketingowa3msc/obsluga-marketingowa3msc.component.html
+++ b/src/app/sites/promocje/obsluga-marketingowa3msc/obsluga-marketingowa3msc.component.html
@@ -42,7 +42,7 @@
     <div class="bg-1">&nbsp;
         <div class="text-block text-white">
             <h1>
-                Trzy miesiące <strong>bardzo</strong> intensywnej pracy !
+                Trzy miesiące <strong>bardzo</strong> intensywnej pracy!
             </h1>
 
             <div class="text-duzy">
@@ -57,7 +57,7 @@
                 <li>gotujemy videoprezentację marki </li>
                 <li>przygotowujemy kampanię reklamową google/facebook</li>
                 <li>wdrażamy strategię skutecznego budowania pozycji na rynku</li>
-                <li>tworzymy <STRONg>INDYWIDUALNY I UNIKATOWY</STRONg> kontent !</li>
+                <li>tworzymy <STRONg>INDYWIDUALNY I UNIKATOWY</STRONg> kontent!</li>
             </ul>
         </div>
     </div>
@@ -77,7 +77,7 @@
     <div class="bg-3">
         <div class="content-container">
             <div class="text-block text-white">
-                <h1>Jesteśmy tuż obok !</h1>
+                <h1>Jesteśmy tuż obok!</h1>
                 <p>By nasze rozwiązanie było skuteczne, <strong>musimy się poznać</strong>. Obecne warunki troszeczkę to
                     utrudniają jednak damy sobie radę z epidemią <i>COVID </i> i skutecznie przygotujemy wymagane
                     materiały.
@@ -214,25 +214,26 @@
                 To ciągle <strong>Wasz interes</strong> więc <i>nigdy</i> nie zapominamy, że chodzi o
                 <strong><i>$$$</i></strong>
                 To sprawdzona metoda która wymaga konsekwentnej pracy i odrobiny cierpliwości. Wyniki - <STRONG>BĘDĄ
-                    !</STRONG> ...a inwestycja abyśmy <strong>Wam</strong> w tym pomogli okaże się <strong>ogromnym
+                   !</STRONG> ...a inwestycja abyśmy <strong>Wam</strong> w tym pomogli okaże się <strong>ogromnym
                     SUKCESEM.</strong>
             </p>
             <p>
                 Naszą domeną jest <strong>subtelny sposób</strong> przedstawienia
                 <strong>biznesu</strong>, treści istotnych do zakomunikowania w <strong>lekki</strong> i
                 <strong>przyjmeny dla oka</strong> sposób. Nie narzucamy się i nie wciskamy nic na siłę. Z dystansem i
-                <strong>z polotem !</strong>
+                <strong>z polotem!</strong>
             </p>
             <p>
-                Dobry wizerunek firmy wpływa na sprzedaż. <strong>Fajne</strong> marki sprzedają więcej !
+                Dobry wizerunek firmy wpływa na sprzedaż. <strong>Fajne</strong> marki sprzedają więcej!
                 <!-- Dziś wszyscy <strong>"kręcą klipy"</strong>... My byliśmy pionierami na tej płaszczyźnie -->
             </p>
         </div>
+        <div >
+            
+
+        </div>
         <div class="yt-player-fullsize">
-            <app-yt-player [id]="'Bd384WTfhDo'"></app-yt-player>
-            <div style="font-size: smaller;" class="router-link" routerLink="/projekty/kaczyBrzeg">
-                <strong>Poznaj szczegóły projektu Kaczy Brzeg !</strong>
-            </div>
+            <img routerLink="/projekty/kaczyBrzeg" class="yt-player-fullsize img-shadow pointer" src="../../../../assets/projekty/kaczyBrzeg/newId_projekty_poznaj_kaczyBrzeg.jpg" alt="Poznaj nasz przykładowy projekt - KaczyBrzeg">
         </div>
     </div>
 
@@ -246,7 +247,7 @@
             <p>
                 Jeśli jesteście zainteresowani współpracą, zapraszamy do <span class="router-link"
                     routerLink="/kontakt">kontaktu</span><br>
-                Przekonaj się ze razem <strong>zrobimy różnicę na rynku !</strong>
+                Przekonaj się ze razem <strong>zrobimy różnicę na rynku!</strong>
             </p>
         </div>
     </div>
