--- a/src/app/sites/promocje/pakiet-start/pakiet-start.component.html
+++ b/src/app/sites/promocje/pakiet-start/pakiet-start.component.html
@@ -9,7 +9,7 @@
                     Twoja nowo otwarta firma musi pojawić się w sieci a nie masz czasu się tym zająć ? 
                 </p>
                 <p>
-                    Proponujemy gotowe rozwiązanie dla zaczynających własna działalność !
+                    Proponujemy gotowe rozwiązanie dla zaczynających własna działalność!
                 </p>
                 <p>
                     Wszystko co potrzebujesz by Twoja marka zaczęła pracować na Ciebie.
@@ -43,7 +43,7 @@
                     <li>firma w smartfonie</li>
                 </ul>
                 <p>
-                    Najważniejszym atutem tej oferty są przede wszystkim konstultacje; Informacje, skuteczne sugestie, zalecenia jak SAMODZIELNIE kontynuować pracę nad profilem. Potrzebujesz tylko narzędzi i odpowiednich wskazówek jak z nich korzystać ? <br/>Ta oferta kierowana jest właśnie dla Ciebie !
+                    Najważniejszym atutem tej oferty są przede wszystkim konstultacje; Informacje, skuteczne sugestie, zalecenia jak SAMODZIELNIE kontynuować pracę nad profilem. Potrzebujesz tylko narzędzi i odpowiednich wskazówek jak z nich korzystać ? <br/>Ta oferta kierowana jest właśnie dla Ciebie!
                 </p>
             </div>
         </div>
@@ -65,7 +65,7 @@
                 <image x="-450" y="-300" width="200%" height="200%" xlink:href="../../../../assets/svg/newId_logo_white.svg" ></image>
                 <image x="-1000" y="0" width="200%" height="200%" xlink:href="../../../../assets/svg/promocje/promocja-start/strzalka.svg" ></image>
                 
-                <image class="click-here" routerLink="/promocje/pakiet-start-zamow" x="350" y="150" width="80%" height="80%" xlink:href="../../../../assets/svg/promocje/promocja-start/cena_2000.svg" ></image>
+                <image class="pointer" routerLink="/promocje/pakiet-start-zamow" x="350" y="150" width="80%" height="80%" xlink:href="../../../../assets/svg/promocje/promocja-start/cena_2000.svg" ></image>
             </svg>
 
         </div>
