introGadget, header-footer fix

--- a/src/app/sites/header/header.component.html
+++ b/src/app/sites/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header-container" *ngIf="ctrlSrv.isHeaderShown$ | async">
-    <header @brickList fxLayout fxLayoutAlign="space-around center">
+    <header class="header-footer" @brickList fxLayout fxLayoutAlign="space-around center">
         <a class="menu-link" routerLinkActive="active-menu-link" routerLink="/home">start</a>
         <a class="menu-link" routerLinkActive="active-menu-link" routerLink="/promocje">promocje</a>
         <a class="menu-link" routerLinkActive="active-menu-link" routerLink="/kontakt">kontakt</a>
