--- a/src/app/sites/home/home.component.html
+++ b/src/app/sites/home/home.component.html
@@ -1,5 +1,24 @@
-<img class="logo-image" src="/assets/svg/newId_logo.svg" alt="newID logo ">
+<!-- <div appViewportFixer class="home-container">
 
-<div class="links-container">
-    <app-social-links></app-social-links>
+        <div class="logo">
+            <img class="logo-image" src="/assets/svg/newId_logo.svg" alt="newID logo">
+        </div>
+        
+
+        <div class="socials">
+            <app-social-links></app-social-links>
+        </div>
+</div> -->
+
+
+
+
+
+<div fxLayout="column" fxLayoutAlign="space-between center" class="home-container">
+    <div class="logo-container">
+        <img fxFlex.gt-sm="100" class="logo-image" src="/assets/svg/newId_logo.svg" alt="newID logo">
+    </div>
+    <div>
+        <app-social-links></app-social-links>
+    </div>
 </div>
