--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<app-header></app-header>
-
-<div [@routeAnimations]="prepareRoute(outlet)">
-    <router-outlet #outlet="outlet"></router-outlet>
+<app-introgadget></app-introgadget>
+<div fxLayout="column" fxLayoutAlign="center center">
+    <app-header fxFlex="10" fxFlexAlign="center"></app-header>
+    <div [@routeAnimations]="prepareRoute(outlet)" class="router-container">
+        <router-outlet #outlet="outlet"></router-outlet>
+    </div>
+    <app-footer fxFlex="10"></app-footer>
 </div>
-
-<app-footer></app-footer>
-
-
