--- a/src/app/sites/footer/footer.component.css
+++ b/src/app/sites/footer/footer.component.css
@@ -1,10 +1,9 @@
-footer {
-    max-width: 400px;
-    height: 50px;
-    margin: auto;
+.header-footer {
+    margin: auto;   
+    /* max-width: 350px; */
+    height: 50px;    
     padding: 10px;    
 }
-
 .menu-link {
     text-align: center;
     cursor: pointer;
