--- a/src/app/sites/footer/footer.component.html
+++ b/src/app/sites/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer-container" *ngIf="ctrlSrv.isFooterShown$ | async">
-    <footer @brickList fxLayout fxLayoutAlign="space-around center">
+    <footer class="header-footer" @brickList fxLayout fxLayoutAlign="space-around center">
         <a class="menu-link" routerLinkActive="active-menu-link" routerLink="/home">start</a>
         <a class="menu-link" routerLinkActive="active-menu-link" routerLink="/promocje">promocje</a>
         <a class="menu-link" routerLinkActive="active-menu-link" routerLink="/kontakt">kontakt</a>
