--- a/src/app/sites/header/header.component.css
+++ b/src/app/sites/header/header.component.css
@@ -1,10 +1,12 @@
-header {
-    max-width: 350px;
-    height: 50px;
-    margin: auto;
+.header-container {
+    width: 100%;
+}
+.header-footer {
+    margin: auto;   
+    /* max-width: 350px; */
+    height: 50px;    
     padding: 10px;    
 }
-
 .menu-link {
     text-align: center;
     cursor: pointer;
