--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,8 @@ a:link {
   
   /* mouse over link */
   a:hover {
-    color: var(--paleta-col-1);
+    /* color: var(--paleta-col-1); */
+    color: white
   }
 
 
@@ -50,6 +51,11 @@ p:focus, div:focus {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.component-container {
+    position: relative;
+}
 
 .pointer {
     cursor: pointer;
