fix router animations sections

--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -1,3 +1,17 @@
-<div class="router-link" routerLink="/home">
-  wróc do home
+<div class="" fxLayout="column" fxLayoutAlign="center center">
+
+  <section>
+    <div class="not-found-info">
+      Pod adresem niczego nie przygotowaliśmy, sprawdź poprawność lub
+    </div>
+  </section>
+  
+  <section>
+    <div class="router-link not-found-go-back" routerLink="/home">
+      wróc do strony głównej
+    </div>
+  </section>
+
+
 </div>
+
