--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,18 @@
 <app-introgadget></app-introgadget>
-<div fxLayout="column" fxLayoutAlign="center center">
+<!-- <div fxLayout="column" fxLayoutAlign="center center">
     <app-header fxFlex="10" fxFlexAlign="center"></app-header>
     <div [@routeAnimations]="prepareRoute(outlet)" class="router-container">
         <router-outlet #outlet="outlet"></router-outlet>
     </div>
     <app-footer fxFlex="10"></app-footer>
+</div> -->
+
+
+
+<div>
+    <app-header></app-header>
+    <main [@routeAnimations]="prepareRoute(outlet)">
+        <router-outlet #outlet="outlet"></router-outlet>
+    </main>
+    <app-footer></app-footer>
 </div>
