--- a/src/app/sites/contact/contact/contact.component.html
+++ b/src/app/sites/contact/contact/contact.component.html
@@ -1,23 +1,33 @@
 <div class="contact-container">
-    <img class="img-logo" src="assets/svg/newId_logo.svg" alt="newId logo">
-    <!-- <h2>Bartosz Prochowski</h2> -->
-    <p>Poznań, Bolka 2/81</p>
-    <p>
-        <a href="tel:+48509229735">
-            <span style="font-size: smaller;">+48</span>&nbsp;<span style="font-size: x-large;">509 229 735</span>
-        </a>
-    </p>
-    <p>
-        <a href="mailto:info@newId.pl">
-            info@newId.pl
-        </a>
-    </p>
+    <section>
+        <img class="img-logo" src="assets/svg/newId_logo.svg" alt="newId logo">
+        <!-- <h2>Bartosz Prochowski</h2> -->
+    </section>
+
+
+    <section>
+        <p>Poznań, Bolka 2/81</p>
+        <p>
+            <a href="tel:+48509229735">
+                <span style="font-size: smaller;">+48</span>&nbsp;<span style="font-size: x-large;">509 229 735</span>
+            </a>
+        </p>
+        <p>
+            <a href="mailto:info@newId.pl">
+                info@newId.pl
+            </a>
+        </p>
+    </section>
+
     <br />
-    <div class="contact-footer">
-        <h6>
-            Pozostańmy w kontakcie, zapraszamy do polubienia/obserwowania naszch profili społecznościowych <a href="https://facebook.com/newIdPl"><span><strong>FB/newIdPl</strong></span></a>&nbsp;|&nbsp;<a href="https://instagram.com/newId.Pl"><span><strong>Insta/newId.pl</strong></span></a>
-        </h6>
-    </div>
+    <section>
+        <div class="contact-footer">
+            <h6>
+                Pozostańmy w kontakcie, zapraszamy do polubienia/obserwowania naszch profili społecznościowych <a href="https://facebook.com/newIdPl"><span><strong>FB/newIdPl</strong></span></a>&nbsp;|&nbsp;<a href="https://instagram.com/newId.Pl"><span><strong>Insta/newId.pl</strong></span></a>
+            </h6>
+        </div>
+    </section>
+
 
 
 </div>
