--- a/src/app/sites/home/home.component.html
+++ b/src/app/sites/home/home.component.html
@@ -15,10 +15,29 @@
 
 
 <div fxLayout="column" fxLayoutAlign="space-between center" class="home-container">
-    <div class="logo-container">
-        <img fxFlex.gt-sm="100" class="logo-image" src="/assets/svg/newId_logo.svg" alt="newID logo">
+    <div fxLayout="column" fxLayoutAlign="center center">
+        <section>
+            <div class="logo-container">
+                <img fxFlex.gt-sm="100" class="logo-image" src="/assets/svg/newId_logo.svg" alt="newID logo">
+            </div>
+        </section>
+        <section>
+            <div class="title-container" fxLayout="column" fxLayoutAlign="center stretch">
+                <div class="subtitle">
+                    Nowa tożsamość Twojej firmy
+                </div>
+                <div class="title">
+                    Agencja marketingowa
+                </div>
+            </div>
+
+        </section>
     </div>
-    <div>
-        <app-social-links></app-social-links>
-    </div>
+
+    <section>
+        <div class="socials">
+            <app-social-links></app-social-links>
+        </div>
+    </section>
+
 </div>
