--- a/src/app/sites/promocje/pakiet-start-zamow/pakiet-start-zamow.component.html
+++ b/src/app/sites/promocje/pakiet-start-zamow/pakiet-start-zamow.component.html
@@ -1,41 +1,45 @@
 <div class="zamow-container">
 
     <div class="zamow-main">
-
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 1080 2160" preserveAspectRatio="xMidYMid slice">
-            <g>
-                <text class="zamow-t1" text-anchor="start" x="5%" y="300" font-size="250" font-family="Raleway" >TAK!</text>
-            </g>
+        <section>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 1080 2160" preserveAspectRatio="xMidYMid slice">
+                <g>
+                    <text class="zamow-t1" text-anchor="start" x="5%" y="300" font-size="250" font-family="Raleway" >TAK!</text>
+                </g>
+        
+                <g>
+                    <text class="zamow-t2" text-anchor="start" x="5%" y="600" font-size="100" font-family="Raleway" font-weight="bold">Więcej info!</text>
+                </g>
     
-            <g>
-                <text class="zamow-t2" text-anchor="start" x="5%" y="600" font-size="100" font-family="Raleway" font-weight="bold">Więcej info!</text>
-            </g>
-
-            <image x="0" y="400" width="50%" height="50%" xlink:href="../../../../assets/svg/promocje/promocja-start/pakiet-start.svg" preserveAspectRatio="xMidYMid meet"></image>
-
-            <image x="35%" y="0" width="60%" height="60%" xlink:href="../../../../assets/svg/promocje/promocja-start/wykrzyknik.svg" preserveAspectRatio="xMidYMid meet"></image>
-
-
-            <a href="tel:509229735">
-            <g>
-                <circle cx="50%" cy="1750" r="400" fill="#D92579"></circle>
-                <circle cx="50%" cy="1750" r="380" class="circle-fill"></circle>
-                <image x="30%" y="1375" width="35%" height="35%" xlink:href="../../../../assets/svg/icons/telephone.svg" preserveAspectRatio="xMidYMid meet"></image>
-                <image x="150" y="975" width="72%" height="72%" xlink:href="../../../../assets/svg/icons/click-round.svg"></image>
-            </g>
-        </a>
-
-
-        </svg>
-
-
+                <image x="0" y="400" width="50%" height="50%" xlink:href="../../../../assets/svg/promocje/promocja-start/pakiet-start.svg" preserveAspectRatio="xMidYMid meet"></image>
+    
+                <image x="35%" y="0" width="60%" height="60%" xlink:href="../../../../assets/svg/promocje/promocja-start/wykrzyknik.svg" preserveAspectRatio="xMidYMid meet"></image>
     
     
+                <a href="tel:509229735">
+                <g>
+                    <circle cx="50%" cy="1750" r="400" fill="#D92579"></circle>
+                    <circle cx="50%" cy="1750" r="380" class="circle-fill"></circle>
+                    <image x="30%" y="1375" width="35%" height="35%" xlink:href="../../../../assets/svg/icons/telephone.svg" preserveAspectRatio="xMidYMid meet"></image>
+                    <image x="150" y="975" width="72%" height="72%" xlink:href="../../../../assets/svg/icons/click-round.svg"></image>
+                </g>
+            </a>
+    
+    
+            </svg>
+        </section>
+
+
+
+    
+    <section>
         <div class="text-block">
             <div>
                 Wróć do informacji o <span class="router-link" routerLink="/promocje/pakiet-start"><strong>Pakiet Start</strong></span>
             </div>
         </div>
+    </section>
+
 
 
     </div>
